--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-openai = "0.28.1"
 lambda_http = "0.13.0"
+serde = "1.0.219"
+serde_json = "1.0.140"
 
 tokio = { version = "1", features = ["macros"] }
