--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ serde = "1.0.219"
 serde_json = "1.0.140"
 tokio = { version = "1", features = ["macros"] }
 reqwest = { version = "0.12.18", features = ["json"] }
+dotenvy = "0.15.7"
