--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde_json = "1.0.140"
 tokio = { version = "1", features = ["macros"] }
 reqwest = { version = "0.12.18", features = ["json"] }
 dotenvy = "0.15.7"
+anyhow = "1.0.98"
