--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.98"
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-dynamodb = "1.78.0"
 lambda_http = "0.13.0"
+dotenvy = "0.15.7"
+reqwest = { version = "0.12.18", features = ["json"] }
 serde = "1.0.219"
 serde_json = "1.0.140"
-tokio = { version = "1", features = ["macros"] }
-reqwest = { version = "0.12.18", features = ["json"] }
-dotenvy = "0.15.7"
-anyhow = "1.0.98"
+tokio = { version = "1", features = ["macros", "full"] }
