--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ lambda_http = "0.13.0"
 dotenvy = "0.15.7"
 reqwest = { version = "0.12.18", features = ["json"] }
 serde = "1.0.219"
+serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
 serde_json = "1.0.140"
 tokio = { version = "1", features = ["macros", "full"] }
