--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 anyhow = "1.0.98"
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-dynamodb = "1.78.0"
-chrono = "0.4.41"
+chrono = { version = "0.4.41", features = ["serde"] }
 lambda_http = "0.13.0"
 dotenvy = "0.15.7"
 reqwest = { version = "0.12.18", features = ["json"] }
