--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
 serde_json = "1.0.140"
 tokio = { version = "1", features = ["macros", "full"] }
 uuid = { version = "1", features = ["v4"] }
+include_dir = "0.7.4"
